Added Library tab (Old and New Testaments)

--- a/prayerbook/Main.storyboard
+++ b/prayerbook/Main.storyboard
@@ -255,35 +255,19 @@
                     <view key="view" contentMode="scaleToFill" id="1DN-uD-Os8">
                         <rect key="frame" x="0.0" y="0.0" width="768" height="954"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="pWm-ye-dd3">
-                                <rect key="frame" x="0.0" y="0.0" width="768" height="904"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                            </tableView>
-                        </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="dHq-YE-b70" firstAttribute="top" secondItem="pWm-ye-dd3" secondAttribute="bottom" id="4Nt-LK-iO6"/>
-                            <constraint firstItem="pWm-ye-dd3" firstAttribute="top" secondItem="plT-O5-Ecp" secondAttribute="bottom" id="7vr-4V-hVg"/>
-                            <constraint firstItem="pWm-ye-dd3" firstAttribute="leading" secondItem="1DN-uD-Os8" secondAttribute="leading" id="9gj-ym-Z5m"/>
-                            <constraint firstAttribute="trailing" secondItem="pWm-ye-dd3" secondAttribute="trailing" id="vhp-aH-ebj"/>
-                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="wkl-pZ-PZm"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
-                    <connections>
-                        <outlet property="tableView" destination="pWm-ye-dd3" id="zoZ-AG-v8k"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Y0C-fS-48K" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-446.09375" y="-1275"/>
         </scene>
-        <!--Library2-->
+        <!--Library Tab-->
         <scene sceneID="cgH-uf-n61">
             <objects>
-                <viewController storyboardIdentifier="Library2" automaticallyAdjustsScrollViewInsets="NO" id="fGK-LW-b6M" customClass="Library2" customModule="ponomar" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Library" automaticallyAdjustsScrollViewInsets="NO" id="fGK-LW-b6M" customClass="LibraryTab" customModule="ponomar" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="g1X-sQ-0OP"/>
                         <viewControllerLayoutGuide type="bottom" id="3Ay-5h-JzX"/>
@@ -291,25 +275,9 @@
                     <view key="view" contentMode="scaleToFill" id="fPD-R5-Bk9">
                         <rect key="frame" x="0.0" y="0.0" width="768" height="954"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="grouped" separatorStyle="none" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="25K-Xo-Xu2">
-                                <rect key="frame" x="0.0" y="0.0" width="768" height="904"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
-                                <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                            </tableView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="3Ay-5h-JzX" firstAttribute="top" secondItem="25K-Xo-Xu2" secondAttribute="bottom" id="1gE-Fv-xyJ"/>
-                            <constraint firstItem="25K-Xo-Xu2" firstAttribute="leading" secondItem="fPD-R5-Bk9" secondAttribute="leading" id="29c-eB-VfZ"/>
-                            <constraint firstAttribute="trailing" secondItem="25K-Xo-Xu2" secondAttribute="trailing" id="jrM-ti-KAu"/>
-                            <constraint firstItem="25K-Xo-Xu2" firstAttribute="top" secondItem="g1X-sQ-0OP" secondAttribute="bottom" id="l7c-oT-8S9"/>
-                        </constraints>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
                     <navigationItem key="navigationItem" id="tEk-ck-hVZ"/>
-                    <connections>
-                        <outlet property="tableView" destination="25K-Xo-Xu2" id="WnX-cf-ht9"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eQB-Qb-Bho" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
